# agentforge

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: CONTRIBUTING.md  evaluation.md  index.md  memory.md  react.md  tools.md
examples/: basic_agent.py  eval_agent.py  eval_set.jsonl  rag_agent.py
src/agentforge/: __init__.py  cli.py  utils.py
src/agentforge/core/: __init__.py  agent.py  parser.py  prompts.py
src/agentforge/eval/: __init__.py  metrics.py  report.py
src/agentforge/llm/: __init__.py  base.py  hf.py  quantized.py
src/agentforge/memory/: __init__.py  base.py  conversation.py  persistent.py
src/agentforge/serve/: __init__.py  app.py
src/agentforge/tools/: __init__.py  base.py  calculator.py  python_repl.py  rag.py  sql.py  web_search.py
tests/: conftest.py  test_agent.py  test_cli.py  test_eval.py  test_memory.py  test_parser.py  test_serve.py  test_tools.py
