[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "agentforge-ml"
version = "0.1.0"
description = "AgentForge — ReAct agents on open-weight LLMs with tools (RAG, REPL, web, SQL, calculator) and an eval harness. Pairs with ragforge-ml and turboquant-ml."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AgentForge Contributors" }]
keywords = [
    "agents",
    "react",
    "tool-use",
    "llm",
    "rag",
    "function-calling",
    "open-source-llm",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "transformers>=4.40",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
serve = ["fastapi>=0.111", "uvicorn>=0.30"]
rag = ["ragforge-ml>=0.1"]
quantized = ["turboquant-ml>=0.1", "accelerate>=0.30"]
tools = ["sympy>=1.12", "duckduckgo-search>=6.0"]
eval = ["pandas>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = ["agentforge-ml[serve,rag,quantized,tools,eval]"]

[project.scripts]
agentforge = "agentforge.cli:app"
af = "agentforge.cli:app"

[project.urls]
Homepage = "https://github.com/Ademo93/agentforge"
Repository = "https://github.com/Ademo93/agentforge"
Issues = "https://github.com/Ademo93/agentforge/issues"
Documentation = "https://Ademo93.github.io/agentforge/"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring a GPU",
    "network: requires network access",
    "integration: end-to-end tests",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
